overlap fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -174,7 +174,7 @@ input, textarea{
 
 .social-icons{
     display:grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(auto-fill, minmax(65px,1fr));
     grid-gap: 1rem;
     .icon{
         height:fit-content;
@@ -633,7 +633,7 @@ header{
         }
     }
     .contact-form{
-        flex-basis: 64%;
+        flex-basis: 65%;
 
 
         form{
@@ -644,7 +644,7 @@ header{
         }
     }
     .contact-details{
-        flex-basis: 30%;
+        flex-basis: 32%;
         display: flex;
         padding: 2rem;
         flex-direction: column;
